feat(config): add application override hierarchy
