# docs/swagger.json
@@ -567,6 +567,9 @@
         "httptransport.ConfigEntryResponseBody": {
             "type": "object",
             "properties": {
+                "application_id": {
+                    "type": "string"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -666,6 +669,9 @@
                 "service"
             ],
             "properties": {
+                "application_id": {
+                    "type": "string"
+                },
                 "environment": {
                     "type": "string"
                 },
@@ -699,6 +705,9 @@
                 "service"
             ],
             "properties": {
+                "application_id": {
+                    "type": "string"
+                },
                 "environment": {
                     "type": "string"
                 },
@@ -736,6 +745,9 @@
                 "service"
             ],
             "properties": {
+                "application_id": {
+                    "type": "string"
+                },
                 "environment": {
                     "type": "string"
                 },
